Improve volume bar styling, Add various states to the way tracks are displayed in the queue

--- a/static/styles/controller.css
+++ b/static/styles/controller.css
@@ -10,6 +10,7 @@ html, body {
     background-size: contain;
     background-repeat:no-repeat;
     background-position: center;
+    background-color: #e0e0e0;
 }
 .card {
     min-height: 0;
