--- a/static/styles/controller.css
+++ b/static/styles/controller.css
@@ -14,6 +14,7 @@ html, body {
 }
 .phone-cover {
     max-width: 100%;
+    display:none;
 }
 
 
@@ -88,10 +89,7 @@ html, body {
     .desktop-cover {
         display: none;
     }
-}
-
-@media (min-width: 1024px) {
     .phone-cover {
-        display: none;
+        display: unset;
     }
 }
