--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -18,7 +18,16 @@ html, body {
     padding-top: 0px;
 }
 
+// Override the is-lowest-value behaviour on the sliders
+.mdl-slider.is-upgraded.is-lowest-value::-webkit-slider-thumb {
+    border: 2px solid rgb(158,158,158) !important;
+    background: rgb(158,158,158) !important;
+}
 
+.mdl-slider.is-upgraded.is-lowest-value::-moz-range-thumb {
+    border: 2px solid rgb(158,158,158) !important;
+    background: rgb(158,158,158) !important;
+}
 
 .compress {
     height: fit-content !important;
